# semrel

./: .dockerignore  .gitignore  .rustfmt.toml  .semrel.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  release-notes-0.3.0.md  semrel-0.3.0-aarch64-unknown-linux-musl.tgz  semrel-0.3.0-arm64-apple-darwin.tgz  semrel-0.3.0-x86_64-apple-darwin.tgz  semrel-0.3.0-x86_64-unknown-linux-musl.tgz
.cargo/: config.toml
.github/workflows/: audit.yml  bump.yml  cd.yml  ci.yml  detect-new-version.yml  hello.yml  release.yml  run-cargo-command.yml  setup-and-run-semrel.yml  setup-audit.yml  world.yml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  algorithms.md  basic-rules.md  capabilities.md  configuration.md  examples.md  future-work.md  introduction.md  motivation.md  usage.md
src/: lib.rs  main.rs  util.rs
src/core/: errors.rs  manifest.rs  mod.rs
src/core/config/: bump_rule_config.rs  config_loader.rs  mod.rs  semrel_config.rs
src/core/conventional_commits/: commit.rs  commit_message.pest  commit_parser.rs  commit_type.rs  mod.rs
src/core/git/: changelog.rs  commit_info.rs  filtering.rs  log.rs  mod.rs  recent.rs  repo.rs
src/core/semantic_release/: bump_rule.rs  bump_rule_mapping.rs  mod.rs  rule_mapping.rs
src/core/version/: mod.rs  simple_version.rs  version_error.rs  version_type.rs
src/manifests/: cargo_toml.rs  mod.rs  package_json.rs  pyproject_toml.rs  supported_manifests.rs
src/supported/: cargo_toml.rs  mod.rs  package_json.rs  pyproject_toml.rs
