[package]
name = "semrel"
version = "0.10.9"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
cargo_toml = "0.22.3"
chrono = "0.4.42"
dirs = "6.0.0"
dotenvy = "0.15.7"
num-traits = "0.2.19"
once_cell = "1.21.3"
package-json = "0.5.0"
thiserror = "2.0.16"
tracing = "0.1.41"

[dependencies.clap]
version = "4.5.47"
features = ["derive", "env"]

[dependencies.git2]
version = "0.20.2"
default-features = false

[dependencies.pest]
version = "2.8.1"
features = ["pretty-print"]

[dependencies.pest_derive]
version = "2.8.1"
features = ["grammar-extras"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.143"
features = ["preserve_order"]

[dependencies.toml]
version = "0.9.5"
features = ["preserve_order"]

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter", "serde", "serde_json", "json"]

[dependencies.xdg]
version = "3.0.0"
features = ["serde"]

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.21.0"
textwrap = "0.16.2"

[lints.clippy]
collapsible_if = "allow"

[lints.rust]
warnings = "deny"
