[package]
name = "semrel"
version = "0.10.26"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
cargo_toml = "0.22.3"
chrono = "0.4.43"
dirs = "6.0.0"
dotenvy = "0.15.7"
num-traits = "0.2.19"
once_cell = "1.21.3"
package-json = "0.5.0"
thiserror = "2.0.18"
tracing = "0.1.44"

[dependencies.clap]
version = "4.5.57"
features = ["derive", "env"]

[dependencies.git2]
version = "0.20.4"
default-features = false

[dependencies.pest]
version = "2.8.6"
features = ["pretty-print"]

[dependencies.pest_derive]
version = "2.8.6"
features = ["grammar-extras"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.149"
features = ["preserve_order"]

[dependencies.toml]
version = "0.9.11"
features = ["preserve_order"]

[dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter", "serde", "serde_json", "json"]

[dependencies.xdg]
version = "3.0.0"
features = ["serde"]

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.24.0"
textwrap = "0.16.2"

[lints.clippy]
collapsible_if = "allow"

[lints.rust]
warnings = "deny"
