[package]
name = "semrel"
version = "0.10.31"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
cargo_toml = "0.22.3"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive", "env"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
git2 = { version = "0.20.4", default-features = false }
package-json = "0.5.0"
pest = { version = "2.8.6", features = ["pretty-print"] }
pest_derive = { version = "2.8.6", features = ["grammar-extras"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
toml = { version = "0.9.11", features = ["preserve_order"] }
toml_edit = "0.25"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "serde", "serde_json", "json"] }
xdg = { version = "3.0.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.25.0"
textwrap = "0.16.2"

[lints.clippy]
collapsible_if = "allow"

[lints.rust]
warnings = "deny"
